[build-system]
requires = [
    "setuptools>=42",
    "pybind11>=2.6.0",
    "tomli",
]
build-backend = "setuptools.build_meta"

[project]
name = "pypef"
version = "2.0.0"
description = "Partitioned Elias-Fano encoding for sequences of nondecreasing integers"
license-files = ["LICENSE"]
authors = [
    { name = "Alec Heckert", email = "alecheckert@gmail.com" },
]
dependencies = [
    "numpy",
]
